2002-11-11  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* opcode/tic4x.h: Added new opcodes and corrected some bugs.  Add
	support for new DSP types.

2002-10-26  Roger Sayle  <roger@eyesopen.com>

	* partition.h:  Close the extern "C" scope when compiling with C++.

2002-10-26  Roger Sayle  <roger@eyesopen.com>
	    DJ Delorie <dj@redhat.com>

	PR bootstrap/8351
	* getopt.h: Avoid prototyping getopt with no arguments in C++.

2002-10-24  Nathan Tallent  <eraxxon@alumni.rice.edu>

	* ansidecl.h (__STDC__): Add (__alpha && __cplusplus) to the
	list of	platform compilers that may look, smell and act
	like __STDC__ but that may not define it.

2002-10-11  David O'Brien  <obrien@FreeBSD.org>

	* getopt.h: getopt is in unistd.h (based on SUSv2).

2002-09-26  Jakub Jelinek  <jakub@redhat.com>

	* elf/x86-64.h: Add TLS relocs.

2002-09-26  Andrew Cagney  <ac131313@redhat.com>

	* regs/: Delete directory.

2002-09-19  Alexandre Oliva  <aoliva@redhat.com>

	* libiberty.h (asprintf, vasprintf): Don't declare them if the
	corresponding HAVE_DECL_ macro is 1.

2002-09-19  Jakub Jelinek  <jakub@redhat.com>

	* elf/i386.h (R_386_TLS_TPOFF, R_386_TLS_IE, R_386_TLS_GOTIE):
	Define.

2002-09-19  Nathan Tallent  <eraxxon@alumni.rice.edu>

	* dis-asm.h: Remove (errant) trailing semicolon (;) from the
	extern "C" { } declaration.

2002-09-04  Nick Clifton  <nickc@redhat.com>

	* dis-asm.h (print_ppc_disassembler_options): Prototype.

2002-08-28  Michael Hayes <m.hayes@elec.canterbury.ac.nz>

	* coff/internal.h: Add new relocation types.
	* coff/ti.h: Add file-header flags for tic4x code.
	* dis-asm.h: Add standard disassembler for tic4x.
	* opcode/tic4x.h: New file.
	* coff/tic4x.h: New file

2002-08-07  H.J. Lu <hjl@gnu.org>

	* bfdlink.h (bfd_link_info): Add allow_undefined_version.
	(bfd_elf_version_expr): Add symver and script.

2002-07-31  Ian Dall  <ian@sibyl.beware.dropbear.id.au>

	* bfdlink.h (bfd_link_common_skip_ar_symbols): New enum.